--- a/TelerikMvcApp1/TelerikMvcApp1.csproj
+++ b/TelerikMvcApp1/TelerikMvcApp1.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\GridDynamicController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\GridController.cs" />
     <Compile Include="Controllers\ReportsController.cs" />
@@ -139,6 +140,7 @@
     <Compile Include="ViewModels\GridAViewModel.cs" />
     <Compile Include="ViewModels\AnimalViewModel.cs" />
     <Compile Include="ViewModels\DemoSelectionViewModel.cs" />
+    <Compile Include="ViewModels\GridDynamicViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -761,6 +763,7 @@
     <Content Include="Views\Grid\GridB.cshtml" />
     <Content Include="Views\Splitter\splitdataattrib.cshtml" />
     <Content Include="Views\Home\ShowReport.cshtml" />
+    <Content Include="Views\GridDynamic\GridD1.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
